# elangdf-client

./: .gitignore  package-lock.json  package.json
src/: index.html  main.js
src-tauri/: Cargo.toml  app_data.json  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: styles.css
src/backup/: index backup.html  index.old2.html  main.old1.js  styles.old1.css
src/handler/: handler.js  interval_req_handler.js
src/utils/: dom-utils.js  utils.js
