[package]
name = "cns-df-client"
version = "1.0.4"
description = "Radio Direction Finder"
authors = ["PT SCM"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utm = "0.1.6"
reqwest = "0.12.3"
tauri-plugin-window-state = "0.1.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
